retrieveUnpackaged/objects/Round__c.object
<CustomObject>
    <fields>
        <fullName>Class_Number__c</fullName>
        <formula>Class__r.Class_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Class ID</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>Rounds</relationshipLabel>
        <relationshipName>Rounds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Round_End_Date__c</fullName>
        <label>Round End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Round_Number__c</fullName>
        <label>Round Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Round_Start_Date__c</fullName>
        <label>Round Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transition_End_Round_Date__c</fullName>
        <label>Transition End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transition_Start_Round_Dates__c</fullName>
        <label>Transition Start Date</label>
        <type>Date</type>
    </fields>
    <label>Round</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Round ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rounds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Round_End_Date</fullName>
        <active>true</active>
        <description>Round end date must be after Round start date</description>
        <errorConditionFormula>Round_End_Date__c  &lt;=  Round_Start_Date__c</errorConditionFormula>
        <errorDisplayField>Round_End_Date__c</errorDisplayField>
        <errorMessage>Round end date must be after Round start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Transition_End_Date</fullName>
        <active>true</active>
        <description>Transition end date must be after the Transition start date</description>
        <errorConditionFormula>Transition_End_Round_Date__c  &lt;=  Transition_Start_Round_Dates__c</errorConditionFormula>
        <errorDisplayField>Transition_End_Round_Date__c</errorDisplayField>
        <errorMessage>Transition end date must be after the Transition start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Transition_Start_Date</fullName>
        <active>true</active>
        <description>Transition start date must be after the round end date</description>
        <errorConditionFormula>Transition_Start_Round_Dates__c   &lt;= Round_End_Date__c</errorConditionFormula>
        <errorDisplayField>Transition_Start_Round_Dates__c</errorDisplayField>
        <errorMessage>Transition start date must be after the round end date</errorMessage>
    </validationRules>
</CustomObject>